<resources>
    <string name="app_name">Chortle</string>
    <string name="slogan">Work together</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main_activity_testing">Chortle Testing - Home</string>

    <string name="undefined">undefined</string>


    <!--UserDTO creation string-->
    <string name="create_user">Create a new user</string>
    <string name="username">Username</string>
    <string name="username_prompt">Enter a username</string>
    <string name="password">Password</string>
    <string name="password_prompt">Enter your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="email">Email Address</string>
    <string name="email_prompt">Enter an email address</string>
    <string name="fname_prompt">First name</string>
    <string name="lname_prompt">Surname</string>

    <string name="submit">Submit</string>
    <string name="login_title">Login to Chortle</string>
    <string name="email_or_username_prompt">Enter your Email or Username</string>
    <string name="login">Login</string>

    <!--UserDTO creation string-->
    <string name="create_group">Create a new group</string>
    <string name="group_name_prompt">Enter a group name</string>
    <string name="group_description_prompt">Enter a group description</string>
    <string name="title_activity_manage_group">Manage Group</string>

    <!--Manage groupDTO-->
    <string name="manage_group">Manage a group</string>
    <string name="members">Members</string>
    <string name="add_new">ADD NEW</string>

    <string name="task_groups">Task Groups</string>
    <string name="tasks">Tasks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
