<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_create_group"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chortle.chortle.CreateGroupActivity">

    <TextView
        android:id="@+id/title_create_group"
        android:text="@string/create_group"
        style="@style/ActivityTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_create_group"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <!--GroupName-->
        <TextView
            android:id="@+id/group_name_prompt"
            style="@style/Subtitle"
            android:text="@string/group_name_prompt"/>

        <EditText
            android:id="@+id/group_name"
            style="@style/EditText"/>

        <!--GroupDescription-->
        <TextView
            android:id="@+id/group_description_prompt"
            style="@style/Subtitle"
            android:text="@string/group_description_prompt"/>

        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/group_description"
            style="@style/EditText"/>

    </LinearLayout>

    <!--Submit-->
    <Button
        android:id="@+id/submit_group"
        android:layout_below="@id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignRight="@id/linearLayout"
        android:onClick="submitGroup"
        />

    <!--Ip address-->
    <TextView
        android:id="@+id/url"
        android:text="URL UNDEFINED"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        style="@style/Subtitle"/>

</RelativeLayout>
