<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_create_user"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chortle.chortle.CreateUserActivity">

    <TextView
        android:id="@+id/title_create_user"
        android:text="@string/create_user"
        style="@style/ActivityTitle"
        android:layout_marginBottom="@dimen/title_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_create_user"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <!--Username-->
        <TextView
            android:id="@+id/username_prompt"
            style="@style/Subtitle"
            android:text="@string/username_prompt"/>

        <EditText
            android:id="@+id/username"
            style="@style/EditText"/>

        <!--Password-->
        <TextView
            android:id="@+id/password_prompt"
            style="@style/Subtitle"
            android:text="@string/password_prompt"/>

        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            style="@style/EditText"/>

        <!--Names-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <!--Firstname-->
                <TextView
                    android:text="@string/fname_prompt"
                    style="@style/Subtitle"/>

                <EditText
                    android:id="@+id/firstname"
                    android:inputType="textPersonName"
                    style="@style/EditText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5">

                <!--Lastname-->
                <TextView
                    android:text="@string/lname_prompt"
                    style="@style/Subtitle"/>

                <EditText
                    android:id="@+id/lastname"
                    android:inputType="textPersonName"
                    style="@style/EditText"/>

            </LinearLayout>

        </LinearLayout>

        <!--Email-->
        <TextView
            android:id="@+id/email_prompt"
            android:text="@string/email_prompt"
            style="@style/Subtitle"/>

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            style="@style/EditText"
            android:ems="12"/>


    </LinearLayout>

    <!--Submit-->
    <Button
        android:id="@+id/submit_user"
        android:layout_below="@id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_user"
        android:layout_alignRight="@id/linearLayout"
        android:onClick="submitUser"
        />

    <!--Ip address-->
    <TextView
        android:id="@+id/url"
        android:text="URL UNDEFINED"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        style="@style/Subtitle"/>

</RelativeLayout>
